iac/kustomize/flask-hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask-hello-world
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - flask-hello-world.home.bradandmarsha.com
      secretName: certificate-flask-hello-world
  rules:
    - host: flask-hello-world.home.bradandmarsha.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-hello-world
              port:
                number: 5000
